Alerta no signup ok

--- a/public/view/signup.html
+++ b/public/view/signup.html
@@ -68,6 +68,7 @@
         </p>
       </form>
     </div>
+    <div id="alert-box" class="alert d-none" role="alert"></div>
     <script src="../js/signup.js" async defer></script>
   </body>
 </html>
