--- a/public/view/home.html
+++ b/public/view/home.html
@@ -28,7 +28,9 @@
             </div>
         </div>
         <p class="descriptionHomepage">Join our betting platform today and start profiting<br>from your trading skills. Bet smarter and earn more<br>in real-time!</p>
-        <button class="btn-signup">START BETTING NOW!</button>
+        <a href="./signup.html">
+            <button class="btn-signup">START BETTING NOW!</button>
+        </a>
     </div>
     
     <div class="container-xxlarge2">
