--- a/public/view/login.html
+++ b/public/view/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container" id="login-container">
         <form class="text-center" onsubmit="event.preventDefault(); signIn();">
-            <img src="../assets/logoPucBet.png" alt="logoPucBet" class="logoPucBet">
+            <img src="../assets/pucbet-logo.png" alt="logoPucBet" class="logoPucBet">
             
             <!-- Alert for errors -->
             <div id="alert-box" class="alert alert-danger d-none" role="alert">
