--- a/public/view/login.html
+++ b/public/view/login.html
@@ -14,9 +14,7 @@
             <img src="../assets/pucbet-logo.png" alt="logoPucBet" class="logoPucBet">
             
             <!-- Alert for errors -->
-            <div id="alert-box" class="alert alert-danger d-none" role="alert">
-                <strong>Error!</strong> <span id="alert-message"></span>
-            </div>
+            <div id="alert-box" class="alert d-none" role="alert"></div>
 
             <div class="form-group mb-3 position-relative">
                 <label for="fEmail" class="form-label">Email</label>
