Developing simple pages

--- a/public/view/signup.html
+++ b/public/view/signup.html
@@ -9,19 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
   </head>
   <body>
-    
-    <div class="container">
-      <div class="alert alert-danger alert-dismissible fade show" role="alert">
-        <strong>Error!</strong> <span id="alert-message">opa</span>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-      </div>
-    
-    
-    
-    <!-- Div para form -->
     <div class="container" id="login-container">
       <form class="text-center" onsubmit="event.preventDefault(); newUserRequest();">
-        <img src="../assets/logoPucBet.png" alt="logoPucBet" class="logoPucBet">
+        <img src="../assets/pucbet-logo.png" alt="logoPucBet" class="logoPucBet">
         <!-- Alert for errors -->
         <div id="alert-box" class="alert d-none" role="alert"></div>
 
