--- a/public/view/landingPage.html
+++ b/public/view/landingPage.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<link rel="stylesheet" href="../styles/home.css">
+<link rel="stylesheet" href="../styles/landingPage.css">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap" rel="stylesheet">
